tests/ui/coverage-attr/name-value.stderr
error: malformed `coverage` attribute input
  --> $DIR/name-value.rs:12:1
   |
LL | #[coverage = "off"]
   | ^^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL - #[coverage = "off"]
LL + #[coverage(off)]
   |
LL - #[coverage = "off"]
LL + #[coverage(on)]
   |

error: malformed `coverage` attribute input
  --> $DIR/name-value.rs:17:5
   |
LL |     #![coverage = "off"]
   |     ^^^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL -     #![coverage = "off"]
LL +     #![coverage(off)]
   |
LL -     #![coverage = "off"]
LL +     #![coverage(on)]
   |

error: malformed `coverage` attribute input
  --> $DIR/name-value.rs:21:1
   |
LL | #[coverage = "off"]
   | ^^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL - #[coverage = "off"]
LL + #[coverage(off)]
   |
LL - #[coverage = "off"]
LL + #[coverage(on)]
   |

error: malformed `coverage` attribute input
  --> $DIR/name-value.rs:26:1
   |
LL | #[coverage = "off"]
   | ^^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL - #[coverage = "off"]
LL + #[coverage(off)]
   |
LL - #[coverage = "off"]
LL + #[coverage(on)]
   |

error: malformed `coverage` attribute input
  --> $DIR/name-value.rs:29:5
   |
LL |     #[coverage = "off"]
   |     ^^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL -     #[coverage = "off"]
LL +     #[coverage(off)]
   |
LL -     #[coverage = "off"]
LL +     #[coverage(on)]
   |

error: malformed `coverage` attribute input
  --> $DIR/name-value.rs:35:1
   |
LL | #[coverage = "off"]
   | ^^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL - #[coverage = "off"]
LL + #[coverage(off)]
   |
LL - #[coverage = "off"]
LL + #[coverage(on)]
   |

error: malformed `coverage` attribute input
  --> $DIR/name-value.rs:39:5
   |
LL |     #[coverage = "off"]
   |     ^^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL -     #[coverage = "off"]
LL +     #[coverage(off)]
   |
LL -     #[coverage = "off"]
LL +     #[coverage(on)]
   |

error: malformed `coverage` attribute input
  --> $DIR/name-value.rs:44:5
   |
LL |     #[coverage = "off"]
   |     ^^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL -     #[coverage = "off"]
LL +     #[coverage(off)]
   |
LL -     #[coverage = "off"]
LL +     #[coverage(on)]
   |

error: malformed `coverage` attribute input
  --> $DIR/name-value.rs:50:1
   |
LL | #[coverage = "off"]
   | ^^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL - #[coverage = "off"]
LL + #[coverage(off)]
   |
LL - #[coverage = "off"]
LL + #[coverage(on)]
   |

error: malformed `coverage` attribute input
  --> $DIR/name-value.rs:53:5
   |
LL |     #[coverage = "off"]
   |     ^^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL -     #[coverage = "off"]
LL +     #[coverage(off)]
   |
LL -     #[coverage = "off"]
LL +     #[coverage(on)]
   |

error: malformed `coverage` attribute input
  --> $DIR/name-value.rs:58:5
   |
LL |     #[coverage = "off"]
   |     ^^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL -     #[coverage = "off"]
LL +     #[coverage(off)]
   |
LL -     #[coverage = "off"]
LL +     #[coverage(on)]
   |

error: malformed `coverage` attribute input
  --> $DIR/name-value.rs:64:1
   |
LL | #[coverage = "off"]
   | ^^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL - #[coverage = "off"]
LL + #[coverage(off)]
   |
LL - #[coverage = "off"]
LL + #[coverage(on)]
   |

error: aborting due to 12 previous errors

For more information about this error, try `rustc --explain E0539`.
